# custom_ttmdata

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  start-app.sh  test.mmd
app/: __init__.py  config.py  constants.py  main.py
app/models/: __init__.py  chat.py  docs.py  file.py  metadata.py
app/routers/: __init__.py  chat.py  docs.py  files.py  metadata.py
app/services/: __init__.py  aws_service.py  data_loader.py  file_storage.py  llm_service.py  pdf_service.py  puppeteer-config.json  query_engine.py
app/utils/: __init__.py  chart_generator.py  prompt_loader.py  sql_generator.py
docs/: ARCHITECTURE.md  MIGRATION_NOTES.md  README.md  mermaid.md
prompts/agents/: analysis_planner.md  bi_report_writer copy.md  bi_report_writer.md  simple_analyst_planner.md  simple_bi_writer copy.md  simple_bi_writer.md
prompts/system/: data_analyst.md
prompts/templates/: schema_context.md
