[project]
name = "sales_intel_agent"
version = "1.0.0"
description = "Enterprise-grade AI Data Analysis Agent with REST APIs, DuckDB integration, and chart generation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "xlrd>=2.0.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "boto3==1.43.24",
    "reportlab==4.5.1",
    "svglib==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
